# anynotedotai

./: .deepsource.toml  .gitignore  Cargo.toml  POLICY.md  README.md  devenv.nix  flake.nix  pubspec.yaml  renovate.json
.github/: dependabot.yml
.github/workflows/: deepsource.yml  devenv.yml  fastlane.yml  flutter.yml  lint.yml  main.yml
.idx/: dev.nix
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/MH0386/anynotedotai/: MainActivity.kt
android/fastlane/: Appfile  Fastfile
fastlane/: Appfile  Fastfile  README.md  report.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
lib/: controller.dart  isar.dart  isar.g.dart  main.dart  menu.dart
lib/Pages/: about.dart  home.dart  settings.dart
lib/database/: user.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/ephemeral/: generated_config.cmake
linux/flutter/ephemeral/.plugin_symlinks/: package_info_plus  path_provider_linux  url_launcher_linux
metadata/en-US/: full_description.txt  short_description.txt  title.txt
scripts/isar/: fdroid_build_isar.sh
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/ephemeral/.plugin_symlinks/: device_info_plus  flutter_web_auth_2  path_provider_windows  url_launcher_windows  window_to_front
windows/runner/: Runner.rc  main.cpp
