[package]
name = "anynotedotai"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
autocfg = "1.4.0"
bindgen = "0.71.1"
bitflags = "2.6.0"
block = "0.1.6"
byteorder = "1.5.0"
bytes = "1.9.0"
cc = "1.2.3"
cesu8 = "1.1.0"
cexpr = "0.6.0"
cfg-if = "1.0.0"
clang-sys = "1.8.1"
cmake = "0.1.52"
combine = "4.6.7"
crossbeam-channel = "0.5.13"
crossbeam-utils = "0.8.20"
dirs = "5.0.1"
dirs-sys = "0.4.1"
doc-comment = "0.3.3"
either = "1.13.0"
enum_dispatch = "0.3.13"
float_next_after = "1.0.0"
getrandom = "0.2.15"
glob = "0.3.1"
heck = "0.5.0"
hermit-abi = "0.4.0"
intmap = "3.0.0"
itertools = "0.13.0"
itoa = "1.0.14"
jni = "0.21.1"
jni-sys = "0.4.0"
lazy_static = "1.5.0"
lazycell = "1.3.0"
libc = "0.2.168"
libloading = "0.8.6"
libredox = "0.1.3"
log = "0.4.22"
malloc_buf = "1.0.0"
mdbx-sys = "12.10.1"
memchr = "2.7.4"
minimal-lexical = "0.2.1"
ndk-context = "0.1.1"
nom = "7.1.3"
num-traits = "0.2.19"
num_cpus = "1.16.0"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
once_cell = "1.20.2"
paste = "1.0.15"
peeking_take_while = "1.0.0"
ppv-lite86 = "0.2.20"
proc-macro2 = "1.0.92"
quote = "1.0.37"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
redox_users = "0.4.6"
regex = "1.11.1"
regex-automata = "0.4.9"
regex-syntax = "0.8.5"
rustc-hash = "2.1.0"
ryu = "1.0.18"
same-file = "1.0.6"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
shlex = "1.3.0"
snafu = "0.8.5"
snafu-derive = "0.8.5"
syn = "2.0.90"
thiserror = "2.0.6"
thiserror-impl = "2.0.6"
threadpool = "1.8.1"
unicode-ident = "1.0.14"
unicode-segmentation = "1.12.0"
walkdir = "2.5.0"
wasi = "0.13.3"
widestring = "1.1.0"
winapi = "0.3.9"
winapi-i686-pc-windows-gnu = "0.4.0"
winapi-util = "0.1.9"
winapi-x86_64-pc-windows-gnu = "0.4.0"
windows-sys = "0.59.0"
windows-targets = "0.52.6"
windows_aarch64_gnullvm = "0.52.6"
windows_aarch64_msvc = "0.52.6"
windows_i686_gnu = "0.52.6"
windows_i686_gnullvm = "0.52.6"
windows_i686_msvc = "0.52.6"
windows_x86_64_gnu = "0.52.6"
windows_x86_64_gnullvm = "0.52.6"
windows_x86_64_msvc = "0.52.6"
xxhash-rust = "0.8.12"
zerocopy = "0.8.13"
zerocopy-derive = "0.8.13"
